Fixed TinyMCE overlapping ribbon

--- a/trunk/spongecms/themes/default/ribbon/ribbon.css
+++ b/trunk/spongecms/themes/default/ribbon/ribbon.css
@@ -10,6 +10,7 @@
 	position: fixed;
 	top: -7px;
 	left: 0px;
+	z-index: 2;
 }
 
 .mainContainer
